--- a/index.html
+++ b/index.html
@@ -3,13 +3,26 @@
   <head>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
     <title>Theta Tau Alpha Gammas Engineering Project</title>
-    <link rel="stylesheet" type ="text/css" href="css/bulma.min.css" />
-    <link rel="stylesheet" type ="text/css" href="css/styles.css" />
+    <link rel="stylesheet" type ="text/css" href="css/bulma.min.css"/>
+    <link rel="stylesheet" type ="text/css" href="css/styles.css"/>
   </head>
   <body>
     <header>
       <div class="container">
         <nav class="navbar" role="navigation" aria-label="main navigation">
+          <div class="navbar-brand">
+            <a class="navbar-item" href="#">
+              <img src="images/logo.png">
+              <p class="logo-text">Alpha Gamma Class</p>
+            </a>
+
+            <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+              <span aria-hidden="true"></span>
+              <span aria-hidden="true"></span>
+              <span aria-hidden="true"></span>
+            </a>
+          </div>
+
           <div class="navbar-end">
             <div class="navbar-item">
               <div class="buttons">
