--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Theta Tau Alpha Gammas Engineering Project</title>
     <link rel="stylesheet" type ="text/css" href="css/bulma.min.css"/>
     <link rel="stylesheet" type ="text/css" href="css/styles.css"/>
+    <link rel="stylesheet" type ="text/css" href="css/helpers.css"/>
+
   </head>
   <body>
     <header>
@@ -27,28 +29,43 @@
             <div class="navbar-item">
               <div class="buttons">
                 <a class="navbar-item">
-                  Home
+                  <a href=index.html>Home</a>
                 </a>
                 <a class="navbar-item">
-                  About
+                  <a href=about.html>About</a>
                 </a>
                 <a class="navbar-item">
-                  Housing/Mechanical
+                  <a href=housing.html>Housing/Mechanical</a>
                 </a>
                 <a class="navbar-item">
-                  Electrical
+                  <a href=electrical.html>Electrical</a>
                 </a>
                 <a class="navbar-item">
-                  Software
+                  <a href=software.html>Software</a>
                 </a>
                 <a class="navbar-item">
-                  Process
+                  <a href=process.html>Process</a>
                 </a>
               </div>
             </div>
           </div>
         </nav>
       </div>
+      <p class="title is-1 is-spaced"; style ="text-align: center;">Smart Garden Engineering Project</p>
+      <h3 class="subtitle is-4"; style="text-align: center;">Theta Tau Epsilon Chapter Alpha Gamma Class</h3>
+      <br>
     </header>
-  </body>
+    <div class="card">
+      <div class="card-image">
+        <figure class="image is-16by19">
+          <img src=images/drawings.png>
+        </figure>
+      </div>
+      <div class="card-content">
+        <div class="media">
+          <div class="media-content">
+            <p class="title is-3"; style ="text-align: center;">Assembly and Model</p>
+            <p class="subtitle is-6"; style ="text-align: center;">Here are CAD engineering drawings for the Smart Garden. We initially made the design based on a shoe rack mechanism, but decided to change it to a staircase type model so the plants aren’t limited in growing. Also, we found a proper way to hide all the electrical components and water tank on the back side, making our final product look aesthetic, while maximizing functionality and durability.</p>
+          </div>
+        </div>
 </html>
