--- a/process.html
+++ b/process.html
@@ -9,51 +9,49 @@
   </head>
 
   <body>
-    <header>
+    <nav class="navbar" role="navigation" aria-label="main navigation">
       <div class="container">
-        <nav class="navbar" role="navigation" aria-label="main navigation">
-          <div class="navbar-brand">
-            <a class="navbar-item" href="#">
-              <img src="images/logo.png">
-              <p class="logo-text">Alpha Gamma Class</p>
-            </a>
+        <div class="navbar-brand">
+          <a class="navbar-item" href="#">
+            <img src="images/logo.png">
+            <p class="logo-text">Alpha Gamma Class</p>
+          </a>
 
-            <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-              <span aria-hidden="true"></span>
-              <span aria-hidden="true"></span>
-              <span aria-hidden="true"></span>
-            </a>
-          </div>
+          <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+          </a>
+        </div>
 
-          <div class="navbar-end">
-            <div class="navbar-item">
-              <div class="buttons">
-                <a class="navbar-item">
-                  <a href=index.html>Home</a>
-                </a>
-                <a class="navbar-item">
-                  <a href=about.html>About</a>
-                </a>
-                <a class="navbar-item">
-                  <a href=housing.html>Housing/Mechanical</a>
-                </a>
-                <a class="navbar-item">
-                  <a href=electrical.html>Electrical</a>
-                </a>
-                <a class="navbar-item">
-                  <a href=software.html>Software</a>
-                </a>
-                <a class="navbar-item">
-                  <a href=process.html>Process</a>
-                </a>
-              </div>
+        <div class="navbar-end">
+          <div class="navbar-item">
+            <div class="buttons">
+              <a class="navbar-item" href="index.html">
+                Home
+              </a>
+              <a class="navbar-item" href="about.html">
+                About
+              </a>
+              <a class="navbar-item" href="housing.html">
+                Housing/Mechanical
+              </a>
+              <a class="navbar-item" href="electrical.html">
+                Electrical
+              </a>
+              <a class="navbar-item" href="software.html">
+                Software
+              </a>
+              <a class="navbar-item" href="process.html">
+                Process
+              </a>
             </div>
           </div>
-        </nav>
+        </div>
       </div>
-    </header>
-    <p class="title is-1 is-spaced"; style ="text-align: center;">Process</p>
+    </nav>
     
+  <p class="title is-1 is-spaced"; style ="text-align: center;">Process</p>
   <div class="tile is-ancestor"; style ="text-align: center;">
     <div class="tile is-4 is-vertical is-parent">
       <div class="tile is-child box"; style ="text-align: center;">
