--- a/index.html
+++ b/index.html
@@ -9,63 +9,45 @@
 
   </head>
   <body>
-    <header>
+    <nav class="navbar" role="navigation" aria-label="main navigation">
       <div class="container">
-        <nav class="navbar" role="navigation" aria-label="main navigation">
-          <div class="navbar-brand">
-            <a class="navbar-item" href="#">
-              <img src="images/logo.png">
-              <p class="logo-text">Alpha Gamma Class</p>
-            </a>
+        <div class="navbar-brand">
+          <a class="navbar-item" href="#">
+            <img src="images/logo.png">
+            <p class="logo-text">Alpha Gamma Class</p>
+          </a>
 
-            <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-              <span aria-hidden="true"></span>
-              <span aria-hidden="true"></span>
-              <span aria-hidden="true"></span>
-            </a>
-          </div>
+          <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+          </a>
+        </div>
 
-          <div class="navbar-end">
-            <div class="navbar-item">
-              <div class="buttons">
-                <a class="navbar-item">
-                  <a href=index.html>Home</a>
-                </a>
-                <a class="navbar-item">
-                  <a href=about.html>About</a>
-                </a>
-                <a class="navbar-item">
-                  <a href=housing.html>Housing/Mechanical</a>
-                </a>
-                <a class="navbar-item">
-                  <a href=electrical.html>Electrical</a>
-                </a>
-                <a class="navbar-item">
-                  <a href=software.html>Software</a>
-                </a>
-                <a class="navbar-item">
-                  <a href=process.html>Process</a>
-                </a>
-              </div>
+        <div class="navbar-end">
+          <div class="navbar-item">
+            <div class="buttons">
+              <a class="navbar-item" href="index.html">
+                Home
+              </a>
+              <a class="navbar-item" href="about.html">
+                About
+              </a>
+              <a class="navbar-item" href="housing.html">
+                Housing/Mechanical
+              </a>
+              <a class="navbar-item" href="electrical.html">
+                Electrical
+              </a>
+              <a class="navbar-item" href="software.html">
+                Software
+              </a>
+              <a class="navbar-item" href="process.html">
+                Process
+              </a>
             </div>
           </div>
-        </nav>
-      </div>
-      <p class="title is-1 is-spaced"; style ="text-align: center;">Smart Garden Engineering Project</p>
-      <h3 class="subtitle is-4"; style="text-align: center;">Theta Tau Epsilon Chapter Alpha Gamma Class</h3>
-      <br>
-    </header>
-    <div class="card">
-      <div class="card-image">
-        <figure class="image is-16by19">
-          <img src=images/drawings.png>
-        </figure>
-      </div>
-      <div class="card-content">
-        <div class="media">
-          <div class="media-content">
-            <p class="title is-3"; style ="text-align: center;">Assembly and Model</p>
-            <p class="subtitle is-6"; style ="text-align: center;">Here are CAD engineering drawings for the Smart Garden. We initially made the design based on a shoe rack mechanism, but decided to change it to a staircase type model so the plants aren’t limited in growing. Also, we found a proper way to hide all the electrical components and water tank on the back side, making our final product look aesthetic, while maximizing functionality and durability.</p>
-          </div>
         </div>
+      </div>
+    </nav>
 </html>
