Clean up closing tags

--- a/about.html
+++ b/about.html
@@ -50,94 +50,8 @@
         </div>
       </div>
     </nav>
+
+    <!--- @Jessica Situ, start hte about page here-->
+
   </body>
-  <body>
-
-  <p class="title is-1 is-spaced"; style ="text-align: center;">Our Team</p>
-  <h3 class="subtitle is-5"; style="text-align: center;">Meet the people behind the creation of the Smart Garden! We are student engineers who are studying Computer Science or Engineering at the University of California, Berkeley. We worked on this project during the Spring of 2021. For inquiries, contact cthetatau@gmail.com.</h3>
-
-  <div class="tile is-ancestor">
-    <div class="tile is-vertical is-8">
-      <div class="tile">
-        <div class="tile is-parent is-vertical">
-          <article class="tile is-child notification is-primary">
-            <p class="title">Justin Nam</p>
-            <p class="subtitle">Mechanical Engineering, Class of 2023, Mechanical/Housing Lead</p>
-            <figure class="image is-4by3">
-              <img src="https://bulma.io/images/placeholders/640x480.png">
-            </figure>
-            <p class="title">Erkan Bozkurt</p>
-            <p class="subtitle">IEOR, Class of 2023, Mechanical/Housing</p>
-            <figure class="image is-4by3">
-              <img src="https://bulma.io/images/placeholders/640x480.png">
-            </figure>
-          </article>
-          <article class="tile is-child notification is-warning">
-            <p class="title">Riya Sheik</p>
-            <p class="subtitle">Chemical Engineering, Class of 2024, Mechanical/Housing</p>
-            <figure class="image is-4by3">
-              <img src="https://bulma.io/images/placeholders/640x480.png">
-            </figure>
-            <p class="title">Charitha Kaki</p>
-            <p class="subtitle">Chemical Engineering, Class of 2024, Mechanical/Housing</p>
-            <figure class="image is-4by3">
-              <img src="https://bulma.io/images/placeholders/640x480.png">
-            </figure>
-          </article>
-        </div>
-        <div class="tile is-parent">
-          <article class="tile is-child notification is-info">
-            <p class="title">Lauren Mard</p>
-            <p class="subtitle">EECS, Class of 2023, Electrical, Software</p>
-            <figure class="image is-4by3">
-              <img src="https://bulma.io/images/placeholders/640x480.png">
-            </figure>
-            <p class="title">Jessica Situ</p>
-            <p class="subtitle">Data Science & Cognitive Science, Class of 2024, Software
-            </p>
-            <figure class="image is-4by3">
-              <img src="https://bulma.io/images/placeholders/640x480.png">
-            </figure>
-            <p class="title">Emily Ngo</p>
-            <p class="subtitle">Data Science & Applied Math, Class of 2023, Web Design Lead, Software
-            </p>
-            <figure class="image is-4by3">
-              <img src="https://bulma.io/images/placeholders/640x480.png">
-            </figure>
-            <p class="title">Kristel Fung</p>
-            <p class="subtitle">Web Design, Software
-            </p>
-            <figure class="image is-4by3">
-              <img src="https://bulma.io/images/placeholders/640x480.png">
-            </figure>
-          </article>
-        </div>
-      </div>
-    </div>
-    <div class="tile is-parent">
-      <article class="tile is-child notification is-success">
-        <div class="content">
-          <p class="title">Jeffrey Yao</p>
-          <p class="subtitle">Computer Science & Data Science, Class of 2023, Electrical/Software Lead</p>
-          <figure class="image is-4by3">
-            <img src="https://bulma.io/images/placeholders/640x480.png">
-          </figure>
-          <p class="title">Sadyant Behera</p>
-          <p class="subtitle">Computer Science & Economics, Class of 2023, Software, Web Design</p>
-          <figure class="image is-4by3">
-            <img src="https://bulma.io/images/placeholders/640x480.png">
-          </figure>
-          <p class="title">Lucas Huang</p>
-          <p class="subtitle">Computer Science, Class of 2023, Software</p>
-          <figure class="image is-4by3">
-            <img src="https://bulma.io/images/placeholders/640x480.png">
-          </figure>
-          <p class="title">Brenda Huang</p>
-          <p class="subtitle">Computer Science, Class of 2024, Software</p>
-          <figure class="image is-4by3">
-            <img src="https://bulma.io/images/placeholders/640x480.png">
-          </figure>
-        </div>
-      </article>
-    </div>
-  </div>
+</html>
