--- a/index.html
+++ b/index.html
@@ -50,4 +50,15 @@
         </div>
       </div>
     </nav>
+
+    <section class="hero">
+      <div class="container">
+        <div class="hero-body">
+          <p class="title">
+            Smart Garden Engineering Project
+          </p>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
