--- a/software.html
+++ b/software.html
@@ -50,43 +50,5 @@
         </div>
       </div>
     </nav>
-
-    <p class="title is-1 is-spaced"; style ="text-align: center;">Software</p>
-    <div class="tile is-ancestor">
-      <div class="tile is-vertical is-8">
-        <div class="tile">
-          <div class="tile is-parent is-vertical">
-            <article class="tile is-child notification is-primary">
-              <figure class="image is-9x16">
-                <img src=images/1.png>
-              </figure>
-            </article>
-            <article class="tile is-child notification is-warning">
-              <figure class="image is-9x16">
-                <img src=images/2.png>
-              </figure>
-            </article>
-          </div>
-          <div class="tile is-parent">
-            <article class="tile is-child notification is-info">
-              <figure class="image is-9x16">
-                <img src=images/3.png>
-              </figure>
-              <br>
-              <figure class="image is-9x16">
-                <img src=images/4.png>
-              </figure>
-            </article>
-          </div>
-        </div>
-      </div>
-      <div class="tile is-parent">
-        <article class="tile is-child notification is-success">
-          <div class="content">
-            <figure class="image is-9x16">
-              <img src=images/5.png>
-            </figure>
-          </div>
-        </article>
-      </div>
-    </div>
+  </body>
+</html>
