--- a/housing.html
+++ b/housing.html
@@ -50,39 +50,5 @@
         </div>
       </div>
     </nav>
-    <p class="title is-1 is-spaced"; style ="text-align: center;">Mechanical and Housing</p>
-    <div class="tile is-ancestor">
-      <div class="tile is-4 is-vertical is-parent">
-        <div class="tile is-child box">
-          <p class="title">Physical Component Overview
-          </p>
-          <p>Our housing unit was constructed with african mahogany wood that contains two levels with a total of 4 areas to hold the plants. The housing behind the first level and under the second level houses the water tank and the electrical components.</p>
-        </div>
-        <div class="tile is-child box">
-          <p class="title">Dimensions</p>
-          <p>Overall housing: 22” x 18” x 22”</p>
-          <p>Platform for plants: 22” x 9” x 1” with .5” depth inwards</p>
-          <p>Water tank housing: 13” x 11” x 9”</p>  
-          <p>Electrical housing: 8.75” x 9” x 11”</p>  
-        </div>
-      </div>
-      <div class="tile is-child box">
-        <div class="tile is-child box">
-          <p class="title">Materials</p>
-          <p></p> Mahogany Wood (1” x 12” x 96”)
-          <p>Carnauba Paste Wax</p>
-          <p>#16-1/2 x 1 in. Nails</p>
-          <p>Gorilla Glue (ensure stable holding between main components)</p>
-        </div>
-        <div class="tile is-child box">
-          <div class="tile is-child box">
-            <p class="title">Overall CAD Design</p>
-            <figure class="image is-3by3">
-              <img src=images/cad.png>
-            </figure>
-          </div>
-      </div>
-    </div>
   </body>
-  </body>
-  <body>
+</html>
