--- a/process.html
+++ b/process.html
@@ -50,28 +50,5 @@
         </div>
       </div>
     </nav>
-    
-  <p class="title is-1 is-spaced"; style ="text-align: center;">Process</p>
-  <div class="tile is-ancestor"; style ="text-align: center;">
-    <div class="tile is-4 is-vertical is-parent">
-      <div class="tile is-child box"; style ="text-align: center;">
-        <p class="title"; style ="text-align: center;">Project Timeline</p>
-        <p class="subtitle is-5"; style="text-align: center;"> March 9 - March 16 
-        <p>Order materials </p>  
-        <p>Perform background botany research on different plant types to define customization guidelines</p>   
-        <p>Complete a finalized development plan for the mechanical and software components of the project</p>  
-        <br>
-        <p class="subtitle is-5"; style="text-align: center;">March 16 - March 30 </p> 
-        <p>Construct the physical frame </p>  
-        <p>Construct and attach water system and light system </p>  
-        <p>Implement wiring to water and light system </p>  
-        <p>App development using React Native</p>  
-        <br>
-        <p class="subtitle is-5"; style="text-align: center">March 30 - April 6</p>  
-        <p>Release v1.0 of app</p>   
-        <p>Procure plants (germinated bean seeds) and test product functionality</p>   
-        <p>Present project</p>  
-      </div>
   </body>
-  <body>
-    
+</html>
