--- a/index.html
+++ b/index.html
@@ -51,14 +51,28 @@
       </div>
     </nav>
 
-    <section class="hero">
+    <section>
       <div class="container">
         <div class="hero-body">
           <p class="title">
             Smart Garden Engineering Project
           </p>
+          <p class="subtitle">
+            Alpha Gamma Class of Theta Tau
+          </p>
         </div>
       </div>
     </section>
+
+    <div class="container">
+      <div class="columns">
+        <div class="column">
+          <img src="./images/model-view.jpeg"/>
+        </div>
+        <div class="column">
+          <img src="./images/exploded-view.jpeg"/>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
