--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </div>
     </nav>
 
-    <section>
+    <section class="hero">
       <div class="container">
         <div class="hero-body">
           <p class="title">
@@ -60,6 +60,15 @@
           <p class="subtitle">
             Alpha Gamma Class of Theta Tau
           </p>
+        </div>
+      </div>
+    </section>
+    
+    <section class="info">
+      <div class="container">
+        <div class="content">
+          <h1>Original Prototype</h1>
+          <p>Here are CAD engineering drawings for the Smart Garden. We initially made the design based on a shoe rack mechanism, but decided to change it to a staircase type model so the plants aren’t limited in growing. Also, we found a proper way to hide all the electrical components and water tank on the back side, making our final product look aesthetic, while maximizing functionality and durability.</p>
         </div>
       </div>
     </section>
