headers for each page

--- a/about.html
+++ b/about.html
@@ -51,6 +51,16 @@
       </div>
     </nav>
 
+    <section class="hero">
+      <div class="container">
+        <div class="hero-body">
+          <p class="title">
+            About
+          </p>
+        </div>
+      </div>
+    </section>
+
     <!--- @Jessica Situ, start hte about page here-->
 
   </body>
