--- a/electrical.html
+++ b/electrical.html
@@ -50,5 +50,16 @@
         </div>
       </div>
     </nav>
+
+    <section class="hero">
+      <div class="container">
+        <div class="hero-body">
+          <p class="title">
+            Electrical
+          </p>
+        </div>
+      </div>
+    </section>
+
   </body>
 </html>
