--- a/housing.html
+++ b/housing.html
@@ -62,7 +62,35 @@
     </section>
 
     <section class="info">
-      
+      <div class="container">
+        <div class="content">
+          <h1>Physical Component Overview</h1>
+          <p>Our housing unit was constructed with african mahogany wood that contains two levels with a total of 4 areas to hold the plants. The housing behind the first level and under the second level houses the water tank and the electrical components.</p>
+        </div>
+        <div class="columns">
+          <div class="column">
+            <img src="./images/model.jpeg"/>
+          </div>
+          <div class="column">
+            <div class="content">
+              <h3>Dimensions</h3>
+              <ul>
+                <li>Overall housing: 22” x 18” x 22”</li>
+                <li>Platform for plants: 22” x 9” x 1” with .5” depth inwards</li>
+                <li>Water tank housing: 13” x 11” x 9”</li>
+                <li>Electrical housing: 8.75” x 9” x 11”</li>
+              </ul>
+              <h3>Materials</h3>
+              <ul>
+                <li>African Mahogany Wood (1” x 12” x 96”)</li>
+                <li>Carnauba Paste Wax</li>
+                <li>#16-1/2 x 1 in. Nails</li>
+                <li>Gorilla Glue (ensure stable holding between main components)</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
   </body>
