--- a/housing.html
+++ b/housing.html
@@ -90,6 +90,24 @@
             </div>
           </div>
         </div>
+        <div class="content">
+          <h1>Dynamic & Mechanism Functionality</h1>
+          <h3>Water Tubing System</h3>
+          <p>A total of 4 water tubes would stem from the water tank, each utilizing a pump that regulates the amount of water for each path. The pump would be based on a timing based system that is customizable based on the amount of water a specific plant would require.</p>
+          <h3>Materials</h3>
+          <ul>
+            <li>DC 12V Mini Submersible Water Pump</li>
+            <li>Vinyl Tubing</li>
+            <li>Clear Plastic Water Tank (12.5” x 8.5” x 8.5”)</li>
+          </ul>
+          <h3>Mechanical Tracking Method</h3>
+          <p>Within the water tank will be a CQRobot Ocean sensor to monitor the water level. The non-contact liquid level sensor realizes non-contact detection of the liquid level in a closed container. It adopts advanced signal processing technology and a high-speed signal processing chip, breaking through the influence of container wall thickness. This system would be connected to the Arduino board then transmit the information via bluetooth to the app to notify a user whenever the water tank level is low.</p>
+          <h3>Materials</h3>
+          <ul>
+            <li>CQRobot Ocean water sensor</li>
+            <li>Arduino Uno Wifi Rev 2</li>
+          </ul>
+        </div>
       </div>
     </section>
 
