add mockups to software page

--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
       </div>
     </section>
 
-    <!--- @Jessica Situ, start hte about page here-->
+    <!--- @Jessica Situ, start the about page here-->
 
   </body>
 </html>
