--- a/software.html
+++ b/software.html
@@ -61,5 +61,30 @@
       </div>
     </section>
 
+    <section class="info">
+      <div class="container">
+        <div class="content">
+          <h1>Mockups</h1>
+        </div>
+        <div class="columns">
+          <div class="column">
+            <img src="./images/mockup-1.png"/>
+          </div>
+          <div class="column">
+            <img src="./images/mockup-2.png"/>
+          </div>
+          <div class="column">
+            <img src="./images/mockup-3.png"/>
+          </div>
+          <div class="column">
+            <img src="./images/mockup-4.png"/>
+          </div>
+          <div class="column">
+            <img src="./images/mockup-5.png"/>
+          </div>
+        </div>
+      </div>
+    </section>
+
   </body>
 </html>
