--- a/process.html
+++ b/process.html
@@ -61,5 +61,35 @@
       </div>
     </section>
 
+    <section class="info">
+      <div class="container">
+        <div class="content">
+
+          <!--- THE START OF ONE DAY'S UPDATE -->
+          <h3>March 9 - March 15</h3>
+          <ul>
+            <li>Ordered materials</li>
+            <li>Perform background botany research on different plant types to define customization guidelines</li>
+            <li>Complete a finalized development plan for the mechanical and software components of the project</li>
+          </ul>
+          <!-- THE END OF ONE DAY'S UPDATE -->
+
+          <h3>March 16 - March 22</h3>
+          <ul>
+            <li>Construct the physical frame</li>
+            <li>Construct and attach water system and light system</li>
+          </ul>
+
+          <h3>March 23 - March 29</h3>
+          <ul>
+            <li>Implement wiring to water and light system</li>
+            <li>App development using React Native</li>
+            <li>Set up server for Arduino</li>
+          </ul>
+          
+        </div>
+      </div>
+    </section>
+
   </body>
 </html>
